// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exportPreviews command cli --minify runs on templates 1`] = `
"mailing Exporting minified preview html to
mailing ./previews_html/
mailing   |-- welcome_preview.html
mailing   |-- welcome_preview_no_unsubscribe.html
mailing ✅ Processed 2 previews

"
`;

exports[`exportPreviews command cli halts on lint errors runs on templates 1`] = `
"mailing Exporting preview html to
mailing ./previews_html/
mailing   |-- welcome_preview.html
mailing   |-- welcome_preview_no_unsubscribe.html
mailing ✅ Processed 2 previews

"
`;

exports[`exportPreviews command cli runs on templates 1`] = `
"mailing Exporting preview html to
mailing ./previews_html/
mailing   |-- welcome_preview.html
mailing   |-- welcome_preview_no_unsubscribe.html
mailing ✅ Processed 2 previews

"
`;

exports[`exportPreviews command outputs html files to outDir 1`] = `
[MockFunction] {
  "calls": [
    [
      "Exporting preview html to",
    ],
    [
      "./out/",
    ],
    [
      "  |-- welcome_preview.html",
    ],
    [
      "  |-- welcome_preview_no_unsubscribe.html",
    ],
    [
      "✅ Processed 2 previews
",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
